# ecs_bench_suite

./: Cargo.toml  justfile  readme.md
.github/workflows/: ci.yaml
benches/: benchmarks.rs
report/: output.txt
src/: lib.rs
src/anput/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/bevy/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/ets/: frag_iter.rs  heavy_compute.rs  mod.rs  schedule.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/hecs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/legion/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/legion_packed/: heavy_compute.rs  schedule.rs  simple_iter.rs
src/planck_ecs/: add_remove.rs  frag_iter.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/shipyard/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/specs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
