[package]
name = "ecs_bench_suite"
version = "0.1.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ecs
anput = "0.21.3"
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
entity-trait-system = { git = "https://github.com/jagprog5/ets.git", version = "1.1.2", rev = "da0910a7f92d3a9e0c6af64dae1ed6bca47d1104", features = ["rayon", "serde"] }
hecs = { version = "0.5", features = ["column-serialize", "row-serialize"] }
legion = "0.3"
planck_ecs = { version = "1.1.0", features = ["parallel"] }
shipyard = "0.5.0"
specs = {version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
# misc
bincode = "1.3"
cgmath = { version = "0.17", features = ["serde"] }
rayon = "1.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
rayon = "1.3"

[[bench]]
name = "benchmarks"
harness = false
