[package]
name = "ecs_bench_suite"
version = "0.1.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ecs
anput = "0.21"
bevy_ecs = "0.17"
entity-trait-system = { version = "1.1", features = ["rayon", "serde"] }
hecs = { version = "0.10", features = ["column-serialize", "row-serialize"] }
legion = "0.4"
planck_ecs = { version = "1.2", features = ["parallel"] }
shipyard = "0.9"
specs = { version = "0.20", features = ["serde"] }
specs-derive = "0.4"
# misc
bincode = "1.3"
cgmath = { version = "0.17", features = ["serde"] }
rayon = "1.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
rayon = "1.3"

[[bench]]
name = "benchmarks"
harness = false
